# git-identity-tools

./: .gitignore  LICENSE  README.md  setup.cfg
git_identity_tools/: identities.py  path_utils.py  status.py  sync.py
scripts/: install.sh
tests/: test_path_utils.py
