[metadata]
name = git-identity-tools
version = 0.1.0
description = Manage Git identities across repos by org or enterprise
author = Ravitej Aluru
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    git-identity-sync = git_identity_tools.sync:main
    git-identity-status = git_identity_tools.status:main